# screenshot-rs

./: Cargo.toml
examples/: screen.rs
src/: lib.rs
